- Made Arguments extend ExpressionEvaluationContext.
- Refactored standard expression evaluation to allow execution of expressions outside templates
  (with limitations, for example, no string externalization).
- Modified TemplateEngine.isInitialized() visibility to public.
- Modified parsing system to allow parsing templates without a root element (with several elements / 
  no elements at all).



2.0.8
=====
- Fixed "Root element name cannot be null" exception when processing non-complete documents (fragments).
- Modified Arguments constructor to public for testing purposes.
- Modified TemplateRepository constructor to public for testing purposes.
- Fixed "get{outputType}For(node)" methods in DOMUtils, which were outputting exceptions due to
  new restrictions at the DOM model.
- Added new utility getHTML5/Xhtml/XmlDOMFor(Reader) methods for obtaining the DOM Document resulting
  from parsing (with an on-purpose created parser) a fragment of markup code, for testing purposes.
- Fixed bad re-escaping of XML entities in entity attributes. The "&" was always being escaped, even
  when it was in fact the beginning of an already-escaped entity. Now this situation is detected and
  re-escaping avoided.



2.0.7
=====
- Fixed letter case in DOCTYPE clause not being respected. Upper-case was required, which was against the HTML5
  spec (which specifies the DOCTYPE clause to be case-insensitive).
- Fixed DOCTYPE clause being output by LEGACYHTML5 parser. Output included an unwanted PUBLIC clause with
  empty-string public and system ids.
- Modified ResourcePool so that it allows to discard and re-create pooled instances by the specification
  of object factories during construction.
- Fixed error raising when default SAX, DOM or HTML parser implementations did not implement the 'reset'
  operation (as in, for example, some old versions of xerces: 2.6.2 and older). Now Thymeleaf detects this,